example-k8s-deployment/base/client-google-chat.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: client-google-chat
  labels:
    app: client-google-chat
    app.kubernetes.io/part-of: nannos
spec:
  replicas: 1
  selector:
    matchLabels:
      app: client-google-chat
  template:
    metadata:
      labels:
        app: client-google-chat
    spec:
      serviceAccountName: client-google-chat
      containers:
      - name: backend
        ports:
        - containerPort: 8080
        livenessProbe:
          httpGet:
            path: /api/v1/health
            port: 8080
          initialDelaySeconds: 30
          periodSeconds: 60
        readinessProbe:
          httpGet:
            path: /api/v1/health
            port: 8080
          initialDelaySeconds: 10
          periodSeconds: 10
---
apiVersion: v1
kind: Service
metadata:
  name: client-google-chat
  labels:
    app: client-google-chat
    app.kubernetes.io/part-of: nannos
spec:
  selector:
    app: client-google-chat
  ports:
    - name: http
      port: 8080
      targetPort: 8080
      protocol: TCP
