example-k8s-deployment/base/client-slack.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: client-slack
  labels:
    app: client-slack
    app.kubernetes.io/part-of: nannos
spec:
  replicas: 1
  selector:
    matchLabels:
      app: client-slack
  template:
    metadata:
      labels:
        app: client-slack
    spec:
      serviceAccountName: client-slack
      containers:
      - name: frontend
        ports:
        - containerPort: 8080
        livenessProbe:
          httpGet:
            path: /
            port: 8080
          initialDelaySeconds: 15
          periodSeconds: 60
        readinessProbe:
          httpGet:
            path: /
            port: 8080
          initialDelaySeconds: 5
          periodSeconds: 1
      - name: backend
        ports:
        - containerPort: 8081
        - containerPort: 8082
        livenessProbe:
          httpGet:
            path: /api/v1/health
            port: 8081
          initialDelaySeconds: 30
          periodSeconds: 60
        readinessProbe:
          httpGet:
            path: /api/v1/health
            port: 8081
          initialDelaySeconds: 10
          periodSeconds: 5
---
apiVersion: v1
kind: Service
metadata:
  name: client-slack
  labels:
    app: client-slack
    app.kubernetes.io/part-of: nannos
spec:
  selector:
    app: client-slack
  ports:
    - name: frontend
      port: 80
      targetPort: 8080
      protocol: TCP
    - name: v1
      port: 8081
      targetPort: 8081
      protocol: TCP
    - name: v2
      port: 8082
      targetPort: 8082
      protocol: TCP
