example-k8s-deployment/base/console.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: console
  labels:
    app: console
    app.kubernetes.io/part-of: nannos
spec:
  replicas: 1
  selector:
    matchLabels:
      app: console
  template:
    metadata:
      labels:
        app: console
    spec:
      serviceAccountName: console
      containers:
      - name: frontend
        ports:
          - containerPort: 8081
        readinessProbe:
          httpGet:
            path: /
            port: 8081
          initialDelaySeconds: 3
          periodSeconds: 10
        resources:
          requests:
            cpu: 50m
            memory: 64Mi
          limits:
            cpu: 200m
            memory: 128Mi

      - name: backend
        ports:
        - containerPort: 8080
        livenessProbe:
          httpGet:
            path: /api/v1/health
            port: 8080
          initialDelaySeconds: 30
          periodSeconds: 60
        readinessProbe:
          httpGet:
            path: /api/v1/health
            port: 8080
          initialDelaySeconds: 10
          periodSeconds: 10
---
apiVersion: v1
kind: Service
metadata:
  name: console
  labels:
    app: console
    app.kubernetes.io/part-of: nannos
spec:
  selector:
    app: console
  ports:
    - name: frontend
      port: 8081
      targetPort: 8081
      protocol: TCP
    - name: backend
      port: 8080
      targetPort: 8080
      protocol: TCP
